--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sunnypuri.github.io/udacity-book-tracking-app",
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
@@ -6,11 +7,14 @@
     "react-router-dom": "^4.4.0-beta.6"
   },
   "devDependencies": {
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "gh-pages": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
