search file updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sunnypuri.github.io/udacity-book-tracking-app",
+  "homepage": "https://khushboo404.github.io/MyReads",
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
